# mempool

./: .gitignore  nginx-mempool.conf
.github/workflows/: cypress.yml  on-tag.yml  op-energy.yml
backend/: package-lock.json  package.json
backend/src/: config.ts  database.ts  index.ts  routes.ts
backend/src/api/: blocks.ts  database-migration.ts  oe-database-migration.ts  op-energy.service.ts  websocket-handler.ts
backend/src/api/bitcoin/: bitcoin-api-abstract-factory.ts  bitcoin-api.ts  esplora-api.ts
backend/src/oe/: database.ts  index.ts
backend/src/oe/api/: blocks.ts  database-migration.ts  oe-blockspan.service.ts  op-blockspan.service.ts  op-energy.service.ts  op-statistics.service.ts  routes.ts  swagger.json  websocket.ts
backend/src/oe/repositories/: OpBlockHeaderRepository.ts
backend/src/oe/service/: op-block-header.service.ts
backend/src/oe/util/: helper.ts
backend/src/op-energy/: chainstats.ts  index.ts  routes.ts
backend/src/op-energy/api/: op-energy.service.ts  op-statistics.service.ts
backend/src/op-energy/repositories/: OpBlockHeaderRepository.ts
backend/src/op-energy/service/: op-block-header.service.ts
docker/backend/: Dockerfile
frontend/: angular.json  package-lock.json  package.json
frontend/src/app/: app-routing.module.ts  app.module.ts
frontend/src/app/dashboard/: dashboard.component.html  dashboard.component.ts
frontend/src/app/interfaces/: electrs.interface.ts  (+2 more)
nix/: README.md  build-nix-from-node.sh  default.nix  derivation.nix  module-backend.nix  module-frontend.nix  module.nix  overlay.nix
nix/backend/: node-packages.nix
nix/development/: main.tf
nix/frontend/: node-env.nix  node-packages-frontend.nix  node-packages.nix  package-lock.json  package.json
nix/production/: main.tf
op-energy-api/: op-energy-api.cabal  op-energy-api.nix
op-energy-backend/: derivation.nix  op-energy-backend.cabal  shell.nix
op-energy-backend/app/: Main.hs
op-energy-backend/src/Data/Bitcoin/: API.hs  BlockInfo.hs  BlockStats.hs
op-energy-backend/src/OpEnergy/: Server.hs
op-energy-backend/src/OpEnergy/Server/: API.hs  GitCommitHash.hs  V1.hs
op-energy-backend/src/OpEnergy/Server/V1/: BlockHeadersService.hs  BlockSpanService.hs  Class.hs  Config.hs  DB.hs  Metrics.hs  StatisticsService.hs  WebSocketService.hs
op-energy-backend/src/OpEnergy/Server/V1/WebSocketService/: Message.hs
(+106 files in other folders)
