cabal-version:      2.4
name:               op-energy-backend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files:
executable op-energy-backend
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
                    , op-energy-backend
                    , servant
                    , servant-server
                    , warp
                    , async
                    , op-energy-api
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:    -O2 -threaded -rtsopts

library
    hs-source-dirs: src
    exposed-modules: OpEnergy.Server.V1
                   , OpEnergy.Server.GitCommitHash
                   , OpEnergy.Server.API
                   , OpEnergy.Server.V1.Config
                   , OpEnergy.Server.V1.DB
    build-depends:    base ^>=4.15.1.0
                    , aeson
                    , aeson-pretty
                    , text
                    , bytestring
                    , containers
                    , servant
                    , servant-server, servant-client, servant-jsonrpc, servant-jsonrpc-client
                    , http-client
                    , servant-swagger
                    , swagger2
                    , time
                    , lens
                    , scientific
                    , persistent, persistent-template, persistent-postgresql, monad-logger
                    , resource-pool
                    , random
                    , cryptohash-sha256
                    , base16-bytestring
                    , op-energy-api
                    , conduit
                    , exceptions
                    , mtl
    ghc-options:    -O2 -Wall -Werror -Wno-unticked-promoted-constructors -fno-warn-name-shadowing -Wno-orphans
    extensions:       OverloadedStrings

